# example-bazel-monorepo

./: BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: ci.yml
projects/libs/go_hello_world/: BUILD.bazel
